# brio

./: .gitmodules
brio_description/: CMakeLists.txt  package.xml
brio_description/launch/: display.launch
brio_description/meshes/: brio_l1.stl  brio_l2.stl  brio_l3.stl  brio_l4.stl
brio_description/urdf/: brio.urdf.xacro
brio_driver/: CMakeLists.txt  package.xml
brio_driver/include/brio_driver/: brio_driver.h
brio_driver/include/brio_driver/utils/: cobs.h
brio_driver/src/: brio_driver.cc  brio_driver_node.cc
brio_msgs/: CMakeLists.txt  package.xml
brio_msgs/srv/: CartesianCommand.srv
firmware/brio_main/: platformio.ini
firmware/brio_main/include/brio/: buzzer.h  pin_assign.h  pin_assign.hpp
firmware/brio_main/include/brio/module/: buzzer.h  stepper_driver.h
firmware/brio_main/include/brio/proto/: stepper_driver.h
firmware/brio_main/include/brio/utils/: cobs.h
firmware/brio_main/proto/: main.proto
firmware/brio_main/src/: buzzer.cc  main.cc
firmware/brio_main/src/module/: buzzer.cc  stepper_driver.cc
firmware/brio_stepper_driver/: .gitignore  .mxproject  Makefile  brio_stepper_driver.ioc
firmware/brio_stepper_driver/Core/Inc/: main.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h  tim.h
firmware/brio_stepper_driver/Core/Src/: adc.c  gpio.c  main.c  spi.c  stm32f3xx_it.c  tim.c  usart.c
firmware/brio_stepper_driver/include/brio/app/: app.h
firmware/brio_stepper_driver/include/brio/module/: a4988.h
firmware/brio_stepper_driver/include/brio/proto/: stepper_driver.h
firmware/brio_stepper_driver/include/brio/util/: constant.h  utils.h
firmware/brio_stepper_driver/src/app/: app.cc
firmware/brio_stepper_driver/src/module/: a4988.cc
pcb/lib/: A4988_STEPPER_MOTOR_DRIVER_CARRIER.kicad_sym  MODULE_A4988_STEPPER_MOTOR_DRIVER_CARRIER.kicad_mod  brio.kicad_sym
pcb/lib/brio.pretty/: 2DC-G213-D42.kicad_mod  UDB-05LFPN.kicad_mod  logo.kicad_mod  logo_mask.kicad_mod
pcb/main_board/: fp-lib-table  main_board.kicad_pcb  main_board.kicad_prl  main_board.kicad_pro  main_board.kicad_sch  stepper_driver.kicad_sch  sym-lib-table
